--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,16 @@ name: server
 description: A sample command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
-
 environment:
-  sdk: '>=2.17.1 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 # dependencies:
 #   path: ^1.8.0
-
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+dependencies:
+  alfred: ^0.1.5+3
+  dcli: ^1.30.2
+  get_it: ^7.2.0
+  mongo_dart: ^0.7.4+1
