--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,10 @@
             "env": {
                 "databaseUrl": "mongodb://localhost:27017/",
                 "databaseName": "test",
-                // "port": 4321
+                "port": 4321
             },
             "args": [
-                "-p", "8888"
+                // "-p", "8080"
             ]
         }
     ]
