--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,21 @@
 name: server
 description: A sample command-line application.
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/berkobob/tradelog-server
+publish_to: none
+
 environment:
   sdk: '>=2.17.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+
 dependencies:
-  alfred: ^0.1.5+3
-  dcli: ^1.30.2
+  alfred: ^1.0.0+1
+  args: ^2.3.1
   get_it: ^7.2.0
-  mongo_dart: ^0.7.4+1
+  logger:
+    path: ../../../lib/logger
+  mongo_dart: ^0.8.1
+  yaml: ^3.1.1
