--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/berkobob/tradelog-server
 publish_to: none
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 dev_dependencies:
   lints: ^2.0.0
@@ -15,7 +15,9 @@ dependencies:
   alfred: ^1.0.0+1
   args: ^2.3.1
   get_it: ^7.2.0
-  logger:
-    path: ../../../lib/logger
   mongo_dart: ^0.8.1
   yaml: ^3.1.1
+  logger:
+    git: 
+      url: git@github.com:berkobob/logger.git
+      ref: main
