--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,5 +19,5 @@ dependencies:
   yaml: ^3.1.1
   logger:
     git: 
-      url: git@github.com:berkobob/logger.git
+      url: https://github.com/berkobob/logger.git
       ref: main
